Fix some spacing issues

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/filter.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/filter.scss
@@ -6,7 +6,6 @@
     align-self: flex-start;
 
     .filter-input {
-        position: absolute;
         height: 2em;
         width: 100%;
         padding: .25em .25em .25em 2em;
@@ -21,7 +20,7 @@
         height: 2em;
         width: 2em;
         z-index: 100;
-        top: 0;
+        top: 1px;
         left: 0;
         padding: .25em;
         color: $grey;
